--- a/webpages/index.html
+++ b/webpages/index.html
@@ -169,7 +169,7 @@
         <li id = "news2" data-w = "3" data-h = "3" data-x = "6" data-y = "0">
           <div class="inner">
               <h3 id = "n2_newsSource">LOADING..</h3>
-              <article id="a1">
+              <article id="n2_a1">
                 <a class="newsLink" href="#"><p class="title"></p></a>
                 <p class="desc"> </p>
               </article>
