--- a/webpages/setup.html
+++ b/webpages/setup.html
@@ -85,7 +85,35 @@
       </form>
 
       <form class="news1" action="/api/news1" method="post">
-        
+        <h3>Primary News Feed Widget</h3>
+        <p id="curFeed1"></p>
+        <label for="cat">Category: </label>
+        <select class="cat" id="cat1">
+          <option value="0">Please select</option>
+        </select>
+        <br>
+        <label for="source">Source: </label>
+        <select class="source1" name="src1" id="src1">
+          <option value="0">Please select</option>
+        </select>
+        <br>
+        <button class="button" type="submit" id="submitPrim">Submit</button>
+      </form>
+
+      <form class="news2" action="/api/news2" method="post">
+        <h3>Secondary News Feed Widget</h3>
+        <p id="curFeed2"></p>
+        <label for="cat">Category: </label>
+        <select class="cat" id="cat2">
+          <option value="0">Please select</option>
+        </select>
+        <br>
+        <label for="source">Source: </label>
+        <select class="source2" name="src2" id="src2">
+          <option value="0">Please select</option>
+        </select>
+        <br>
+        <button class="button" type="submit" id="submitSec">Submit</button>
       </form>
     </div>
 
